...
    "passwordLabel": "Contraseña",
    "loginButton": "Iniciar sesión",
    "noAccount": "¿No tienes una cuenta?",
    "register": "Registrarse",
    "orContinueWith": "O CONTINÚA CON",
    "errors": {
      "empty": "Por favor, rellena todos los campos.",
      "wrongCredentials": "El correo o la contraseña son incorrectos.",
      "invalidEmail": "El formato del correo no es válido.",
      "networkTitle": "Error de conexión",
      "networkMessage": "Error de conexión con el servidor. Intente más tarde.",
      "accountDeactivated": "Su cuenta ha sido desactivada. Póngase en contacto con el administrador"
    }
  },
  "register": {
...
