appId: com.proyect1.ATIDental
---
- launchApp

- extendedWaitUntil:
    visible:
      id: "login-title"
    timeout: 60000

# =======================================================
# ESCENARIO 1: VALIDACIÓN DE CAMPOS VACÍOS
# =======================================================
- tapOn:
    id: "login-button"
- assertVisible: "Por favor, rellena todos los campos."

# =======================================================
# ESCENARIO 2: VALIDACIÓN DE FORMATO DE CORREO
# =======================================================
- tapOn:
    id: "email-input"
- inputText: "correoInvalido.com"
- tapOn:
    id: "password-input"
- inputText: "Password123!"
- hideKeyboard
- tapOn:
    id: "login-button"
- assertVisible: "El formato del correo no es válido."

# Limpiamos los campos para el siguiente flujo
- tapOn:
    id: "email-input"
- eraseText

# =======================================================
# ESCENARIO 3: LOGIN ERRONEO
# =======================================================
- tapOn:
      id: "email-input"
- inputText: "soamaia03@gmail.com"    # 🔐 Debe ser un usuario real en tu Authentication de Firebase
- hideKeyboard
- tapOn:
      id: "login-button"
- assertVisible: "El correo o la contraseña son incorrectos."

# Limpiamos los campos para el siguiente flujo
- tapOn:
      id: "password-input"
- eraseText

# =======================================================
# ESCENARIO 4: LOGIN EXITOSO CON FIREBASE REAL Y LOGOUT
# =======================================================
- tapOn:
    id: "password-input"
- inputText: "Robin123456"
- hideKeyboard
- tapOn:
    id: "login-button"

# Esperamos a que la red viaje a Firebase y Expo Router haga la redirección
- extendedWaitUntil:
    visible:
      id: "welcome-header"     # Texto que pusimos en tu HomeScreen
    timeout: 10000                 # Le damos hasta 10 segundos por si el internet está lento

# =======================================================
# ESCENARIO 5: CIERRE DE SESIÓN SEGURO
# =======================================================
- tapOn:
    id: "profile-tab"

- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-logout"

# Comprobamos que regresamos sanos y salvos a la pantalla de Login
- extendedWaitUntil:
    visible: 
        id: "login-title"
    timeout: 5000